app/lib/core_bindings/lenny_bindings.dart


  @ffi.Int32()
  external int exposure_min;

  @ffi.Int32()
  external int exposure_max;

  @ffi.Uint32()
  external int exposure_step_milli;

  @ffi.Uint8()
  external int mode_count;

  @ffi.Array.multi([32])
  external ffi.Array<lenny_mode> modes;
}

final class lenny_receiver_callbacks extends ffi.Struct {
  external ffi.Pointer<ffi.Void> user;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Int32 state,
        ffi.Int32 reason,
      )
    >
  >
  on_state;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<ffi.Uint8> device_id,
        ffi.Pointer<ffi.Char> device_name,
      )
    >
  >
  on_approval_needed;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<lenny_stream_settings> effective,
      )
    >
  >
  on_stream_start;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Uint8 state,
        ffi.Pointer<ffi.Char> reason,
      )
    >
  >
  on_stream_status;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<ffi.Uint8> data,
        ffi.Size size,
      )
    >
  >
  on_video_config;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<lenny_video_frame> frame,
      )
    >
  >
  on_video_frame;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<lenny_control_state> state,
      )
    >
  >
  on_control_state;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Uint32 req_id,
        ffi.Uint8 result,
      )
    >
  >
  on_control_ack;

  static ffi.Pointer<lenny_receiver_callbacks> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> user,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Int32 state,
          ffi.Int32 reason,
        )
      >
    >
    on_state,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<ffi.Uint8> device_id,
          ffi.Pointer<ffi.Char> device_name,
        )
      >
    >
    on_approval_needed,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<lenny_stream_settings> effective,
        )
      >
    >
    on_stream_start,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Uint8 state,
          ffi.Pointer<ffi.Char> reason,
        )
      >
    >
    on_stream_status,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<ffi.Uint8> data,
          ffi.Size size,
        )
      >
    >
    on_video_config,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<lenny_video_frame> frame,
        )
      >
    >
    on_video_frame,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<lenny_control_state> state,
        )
      >
    >
    on_control_state,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Uint32 req_id,
          ffi.Uint8 result,
        )
      >
    >
    on_control_ack,
  }) => $allocator<lenny_receiver_callbacks>()
    ..ref.user = user
    ..ref.on_state = on_state
    ..ref.on_approval_needed = on_approval_needed
    ..ref.on_stream_start = on_stream_start
    ..ref.on_stream_status = on_stream_status
    ..ref.on_video_config = on_video_config
    ..ref.on_video_frame = on_video_frame
    ..ref.on_control_state = on_control_state
    ..ref.on_control_ack = on_control_ack;
}

final class lenny_receiver_config extends ffi.Struct {
  external lenny_identity identity;

  @ffi.Uint16()
  external int port;

  external lenny_stream_settings preferred;
}

final class lenny_sender_callbacks extends ffi.Struct {
  external ffi.Pointer<ffi.Void> user;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Int32 state,
        ffi.Int32 reason,
      )
    >
  >
  on_state;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<lenny_stream_settings> requested,
        ffi.Pointer<lenny_stream_settings> effective,
      )
    >
  >
  on_stream_config;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Int32 Function(
        ffi.Pointer<ffi.Void> user,
        ffi.Pointer<lenny_control> control,
      )
    >
  >
  on_control;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Void> user, ffi.Uint32 kbps)
    >
  >
  on_bitrate;

  static ffi.Pointer<lenny_sender_callbacks> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> user,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Int32 state,
          ffi.Int32 reason,
        )
      >
    >
    on_state,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<lenny_stream_settings> requested,
          ffi.Pointer<lenny_stream_settings> effective,
        )
      >
    >
    on_stream_config,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Int32 Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Pointer<lenny_control> control,
        )
      >
    >
    on_control,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<ffi.Void> user, ffi.Uint32 kbps)
      >
    >
    on_bitrate,
  }) => $allocator<lenny_sender_callbacks>()
    ..ref.user = user
    ..ref.on_state = on_state
    ..ref.on_stream_config = on_stream_config
    ..ref.on_control = on_control
    ..ref.on_bitrate = on_bitrate;
}

final class lenny_sender_config extends ffi.Struct {
  external lenny_identity identity;

  external ffi.Pointer<lenny_mode> modes;

  @ffi.Size()
  external int mode_count;

  @ffi.Uint32()
  external int max_bitrate_kbps;

  @ffi.Uint32()
  external int controls;

  external ffi.Pointer<lenny_lens> lenses;

  @ffi.Size()
  external int lens_count;

  @ffi.Int32()
  external int exposure_comp_min;

  @ffi.Int32()
  external int exposure_comp_max;

  @ffi.Uint32()
  external int exposure_comp_step_milli;

  external ffi.Pointer<lenny_lens_caps> lens_caps;
}

final class lenny_session extends ffi.Opaque {}

enum lenny_state {
  LENNY_STATE_IDLE(0),
  LENNY_STATE_CONNECTING(1),
  LENNY_STATE_HANDSHAKE(2),
  LENNY_STATE_AWAITING_APPROVAL(3),
  LENNY_STATE_STREAMING(4),
  LENNY_STATE_RECONNECTING(5),
  LENNY_STATE_CLOSED(6);

  final int value;
  const lenny_state(this.value);

  static lenny_state fromValue(int value) => switch (value) {
    0 => LENNY_STATE_IDLE,
    1 => LENNY_STATE_CONNECTING,
    2 => LENNY_STATE_HANDSHAKE,
    3 => LENNY_STATE_AWAITING_APPROVAL,
    4 => LENNY_STATE_STREAMING,
    5 => LENNY_STATE_RECONNECTING,
    6 => LENNY_STATE_CLOSED,
    _ => throw ArgumentError('Unknown value for lenny_state: $value'),
  };
}

final class lenny_stats extends ffi.Struct {
  @ffi.Int64()
  external int rtt_us;

  @ffi.Int64()
  external int clock_offset_us;

  @ffi.Uint64()
  external int frames;

  @ffi.Uint64()
  external int bytes;

  @ffi.Uint32()
  external int bad_messages;

  @ffi.Uint32()
  external int reconnects;

  @ffi.Int64()
  external int latency_us;

  @ffi.Uint32()
  external int dropped_frames;

  @ffi.Uint32()
  external int bitrate_kbps;

  static ffi.Pointer<lenny_stats> $allocate(
    ffi.Allocator $allocator, {
    required int rtt_us,
    required int clock_offset_us,
    required int frames,
    required int bytes,
    required int bad_messages,
    required int reconnects,
    required int latency_us,
    required int dropped_frames,
    required int bitrate_kbps,
  }) => $allocator<lenny_stats>()
    ..ref.rtt_us = rtt_us
    ..ref.clock_offset_us = clock_offset_us
    ..ref.frames = frames
    ..ref.bytes = bytes
    ..ref.bad_messages = bad_messages
    ..ref.reconnects = reconnects
    ..ref.latency_us = latency_us
    ..ref.dropped_frames = dropped_frames
    ..ref.bitrate_kbps = bitrate_kbps;
}

final class lenny_stream_settings extends ffi.Struct {
  @ffi.Uint8()
  external int codec;

  external lenny_mode mode;

  @ffi.Uint32()
  external int bitrate_kbps;

  @ffi.Uint8()
  external int has_lens;

  @ffi.Uint8()
  external int lens_id;
}

final class lenny_video_frame extends ffi.Struct {
  @ffi.Uint32()
  external int frame_seq;

  @ffi.Int64()
  external int pts_us;

  @ffi.Int64()
  external int local_pts_us;

  @ffi.Uint8()
  external int orientation;

  @ffi.Uint8()
  external int flags;

  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int size;

  static ffi.Pointer<lenny_video_frame> $allocate(
    ffi.Allocator $allocator, {
    required int frame_seq,
    required int pts_us,
    required int local_pts_us,
    required int orientation,
    required int flags,
    required ffi.Pointer<ffi.Uint8> data,
    required int size,
  }) => $allocator<lenny_video_frame>()
    ..ref.frame_seq = frame_seq
    ..ref.pts_us = pts_us
    ..ref.local_pts_us = local_pts_us
    ..ref.orientation = orientation
    ..ref.flags = flags
    ..ref.data = data
    ..ref.size = size;
}
